# resistor-play

./: .env  .gitignore  .gitmodules  compute_resistor.py  get_r_values.py  main.py  pyproject.toml  r_values.pkl  resistor-values.txt  rpar.csv  rser.csv
src/best_resistance/: __init__.py  bests.py  eseries.py  one_resistor.py  two_resistors.py  types.py
src/kicad_sym_lib_access/: get_lib_symbols.py
test/: test_best_resistance.py  test_eseries.py  test_read_resistor_values.py
test/data/: best_resistance2_series.csv  resistor_values.pkl
tests/: test_best_resistance.py  test_eseries.py  test_read_resistor_values.py  test_rho.py
tests/data/: !Resistor-0603.kicad_sym  resistor_values.pkl
