[project]
name = "resistor-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kicad-symlib-utility>=1.0.0",
]

[ruff]
line-length = 200
select = ["E", "F", "W", "C90", "B", "N", "Q", "I", "T"]
ignore = ["E501", "W503", "F403", "F405"]
exclude = ["build", ".venv", "venv", "__pypackages__"]

[tool.uv.sources]
kicad-symlib-utility = {workspace = true}

[dependency-groups]
dev = [
    "inline-snapshot>=0.29.1",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]


[tool.uv.workspace]
members = ["packages/kicad-symlib-utility"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = "src"

[tool.inline-snapshot]
# Pure formatting:
format-command = "ruff format --stdin-filename {filename}"

# (Optional) If you also want auto-fixes before formatting, use this instead:
# format-command = "ruff check --fix --stdin-filename {filename} - | ruff format --stdin-filename {filename}"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

